# Crypto_AlgoTrader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  initial_testing.cpp
app/paper-trader/: CMakeLists.txt
include/: logger.hpp  risk_manager.hpp  trader.hpp
include/alpaca/: alpaca_execution_engine.hpp  alpaca_provider.hpp
include/brokers/: alpaca.hpp
include/interfaces/: execution_engine.hpp  portfolio_state_provider.hpp  strategy.hpp
include/strategies/: strategy_smacrossover.hpp
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/common/: logger.hpp
lib/common/src/: logger.cpp
src/: data_collector.cpp  data_collector.hpp  execution_engine.cpp  execution_engine.hpp  logger.cpp  logger.hpp  main.cpp  market_data.cpp  portfolio_state_provider.cpp  portfolio_state_provider.hpp  risk_manager.cpp  risk_manager.hpp  secrets.cpp  secrets.hpp  strategy.hpp  strategy_smacrossover.cpp  strategy_smacrossover.hpp  trader.cpp
src/strategies/: strategy_smacrossover.cpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  test_common.cpp
tmp/lib/broker/include/broker/: alpaca.hpp  portfolio_state_provider.hpp
tmp/lib/broker/src/: alpaca.cpp
tmp/lib/strategy/include/strategy/: smacrossover.hpp  strategy.hpp
tmp/lib/strategy/src/: smacrossover.cpp
tmp/src/brokers/: alpaca.cpp
tmp/src/strategies/: strategy_smacrossover.cpp
tmp2/include/: data_collector.hpp  market_data.hpp  trader.hpp
tmp2/include/brokers/: alpaca.hpp
tmp2/include/interfaces/: strategy.hpp
tmp2/src/: data_collector.cpp  market_data.cpp  risk_manager.cpp  secrets.cpp  trader.cpp
